--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
 
 </head>
 
@@ -41,22 +37,15 @@
             <!-- Menu Items -->
 
             <div>
-
                 <ul class="nav navbar-nav">
-
                     <li class="active"><a href="#">Home</a></li>
-
                     <li><a href="#">Teams</a></li>
-
                     <li><a href="#">Coaches</a></li>
                     <li><a href="#">Board</a></li>
                     <li><a href="#">News</a></li>
                     <li><a href="#">Links</a></li>
                 </ul>
-
             </div>
-
-
 
         </div>
 
