--- a/Pages/teams.html
+++ b/Pages/teams.html
@@ -43,41 +43,41 @@
 <div class="teampage">
 <div class="team">
   <h2>Blizzard</h2>
-  <p>head coach: Delonda Hayes</p>
+  <p>Head Coach: Delonda Hayes</p>
   <p>Assistant Coach Jerry Forbes</p>
   <a href="#">Full Roster</a>
   
 </div>
 <div class="team">
 <h2>Heat</h2>
-<p>head coach: Steve Howard</p>
+<p>Head Coach: Steve Howard</p>
 <a href="#">Full Roster</a>
 </div>
 <div class="team">
    <h2>Storm</h2>
-  <p>head coach: Eric Hagan</p>
+  <p>Head Coach: Eric Hagan</p>
   <p>Assistant Coach Cindy Marx</p>
   <a href="#">Full Roster</a>
 </div>
 <div class="team">
   <h2>Thunder</h2>
-  <p>head coach: Mackenzie Hayes</p>
+  <p>Head Coach: Mackenzie Hayes</p>
   <a href="#">Full Roster</a>
 </div>
 <div class="team">
    <h2>Vortex</h2>
-  <p>head coach: Kendra Bronsick</p>
+  <p>Head Coach: Kendra Bronsick</p>
   <a href="#">Full Roster</a>
 </div>
 <div class="team">
   <h2>Tsunami</h2>
-  <p>head coach: Dale White</p>
+  <p>Head Coach: Dale White</p>
   <p>Assistant Coach Ann White</p>
   <a href="#">Full Roster</a>
 </div>
 <div class="team">
     <h2>Cyclones</h2>
-    <p>head coach: Kylie Forster</p>
+    <p>Head Coach: Kylie Forster</p>
     <p>Assistant Coach: Hannah Pierce</p>
     <a href="#">Full Roster</a>
   </div>
