--- a/Pages/teams.html
+++ b/Pages/teams.html
@@ -42,41 +42,70 @@
 
 <div class="teampage">
 <div class="team">
-  <h2>Blizzard</h2>
+  <h2>18 Blizzard</h2>
   <p>Head Coach: Delonda Hayes</p>
-  <p>Assistant Coach Jerry Forbes</p>
+  <p>Assistant Coach: Jerry Forbes</p>
   <a href="#">Full Roster</a>
-  
-</div>
+  </div>
 <div class="team">
-<h2>Heat</h2>
+<h2>17 Heat</h2>
 <p>Head Coach: Steve Howard</p>
 <a href="#">Full Roster</a>
 </div>
 <div class="team">
-   <h2>Storm</h2>
-  <p>Head Coach: Eric Hagan</p>
-  <p>Assistant Coach Cindy Marx</p>
+  <h2>17 Typhoons</h2>
+  <p>Head Coach: Dani Newsom</p>
+  <p>Assistant Coach: Trey Newsom</p>
+  <a href="#">Full Roster</a>
+  </div>
+  <div class="team">
+    <h2>16 Hurricanes</h2>
+    <p>Head Coach: Eric Hagan</p>
+    <p>Assistant Coach: Cindy Marx</p>
+    <a href="#">Full Roster</a>
+    </div>
+<div class="team">
+   <h2>16 Storm</h2>
+  <p>Head Coach: April Buckner</p>
+  <p>Assistant Coach: Tonya Tivitt</p>
   <a href="#">Full Roster</a>
 </div>
 <div class="team">
-  <h2>Thunder</h2>
+  <h2>15 Vortex</h2>
+ <p>Head Coach: Kendra Bronsick</p>
+ <a href="#">Full Roster</a>
+</div>
+<div class="team">
+  <h2>15 Tornadoes</h2>
+  <p>Head Coach: Kassidie Hayes</p>
+  <p>Assistant Coach: Miranda Boaz </p>
+  <a href="#">Full Roster</a>
+</div>
+<div class="team">
+  <h2>14 Thunder</h2>
   <p>Head Coach: Mackenzie Hayes</p>
+  <p>Assistant Coach: Krisin Logsdon </p>
   <a href="#">Full Roster</a>
 </div>
 <div class="team">
-   <h2>Vortex</h2>
-  <p>Head Coach: Kendra Bronsick</p>
+   <h2>14 Lightning</h2>
+  <p>Head Coach: Steve Howard</p>
   <a href="#">Full Roster</a>
 </div>
 <div class="team">
-  <h2>Tsunami</h2>
+  <h2>13 Tsunami</h2>
   <p>Head Coach: Dale White</p>
-  <p>Assistant Coach Ann White</p>
+  <p>Assistant Coach: Ann White</p>
   <a href="#">Full Roster</a>
 </div>
 <div class="team">
-    <h2>Cyclones</h2>
+  <h2>13 Ice</h2>
+  <p>Head Coach: Gabe Weiss</p>
+  <p>Assistant Coach: Tesha Weiss</p>
+  <a href="#">Full Roster</a>
+  </div>
+<div class="team">
+    <h2>12 Cyclones</h2>
     <p>Head Coach: Kylie Forster</p>
     <p>Assistant Coach: Hannah Pierce</p>
     <a href="#">Full Roster</a>
