roster and home page redo

--- a/rosters/ice.html
+++ b/rosters/ice.html
@@ -42,21 +42,21 @@
 
 <div class="teampage">
 <div class="team">
-  <h2>13-1 Tsunami Full Roster:</h2>
-  <p>Conleigh Osborne</p>  
-  <p>Addison Travis</p>  
-  <p>Chase Mather</p>  
-  <p>Ella Decker</p>  
-  <p>Karsen Tipmore</p>  
-  <p>Julia Marshall</p>  
-  <p>Kennedy Murphy</p>  
-  <p>Addie McDaniel</p>  
-  <p>Maya Joska</p>  
-  <p>Hannah Ashley</p>  
+  <h2>13 Ice Full Roster:</h2>
+  <p>Isabelle Reisz</p>  
+  <p>Molly Aud</p>  
+  <p>Emma Goins</p>  
+  <p>Sarah Brown</p>  
+  <p>Ava Deters</p>  
+  <p>Ava Benson</p>  
+  <p>Ahalia Ramirez</p>  
+  <p>Kirsten Taylor</p>  
+  <p>Cameron Chandler</p>  
+   
   
   
-  <p>Head Coach: Dale White</p>
-    <p>Assistant Coach: Ann White</p>
+  <p>Head Coach: Gabe Weiss</p>
+  <p>Assistant Coach: Tesha Weiss</p>
   <a href="../pages/teams.html">TEAMS PAGE</a>
   </div>
 
