--- a/rosters/storm.html
+++ b/rosters/storm.html
@@ -42,21 +42,22 @@
 
 <div class="teampage">
 <div class="team">
-  <h2>13-1 Tsunami Full Roster:</h2>
-  <p>Conleigh Osborne</p>  
-  <p>Addison Travis</p>  
-  <p>Chase Mather</p>  
-  <p>Ella Decker</p>  
-  <p>Karsen Tipmore</p>  
-  <p>Julia Marshall</p>  
-  <p>Kennedy Murphy</p>  
-  <p>Addie McDaniel</p>  
-  <p>Maya Joska</p>  
-  <p>Hannah Ashley</p>  
+  <h2>16 Storm Full Roster:</h2>
+  <p>Hadley Latham</p>  
+  <p>Allie Hamilton</p>  
+  <p>Maddi Boswell</p>  
+  <p>Brooklin Engler</p>  
+  <p>Lexi Miles</p>  
+  <p>Chae Bowers</p>  
+  <p>Emma Gibson</p>  
+  <p>Kenzie Skaggs</p>  
+  <p>Camryn Kerwick</p>  
+  <p>Shelby Durham</p>
+  <p>Delaney Flaherty</p>
   
   
-  <p>Head Coach: Dale White</p>
-    <p>Assistant Coach: Ann White</p>
+  <p>Head Coach: April Buckner</p>
+  <p>Assistant Coach: Tonya Tivitt</p>
   <a href="../pages/teams.html">TEAMS PAGE</a>
   </div>
 
