--- a/rosters/cyclones.html
+++ b/rosters/cyclones.html
@@ -42,21 +42,21 @@
 
 <div class="teampage">
 <div class="team">
-  <h2>13-1 Tsunami Full Roster:</h2>
-  <p>Conleigh Osborne</p>  
-  <p>Addison Travis</p>  
-  <p>Chase Mather</p>  
-  <p>Ella Decker</p>  
-  <p>Karsen Tipmore</p>  
-  <p>Julia Marshall</p>  
-  <p>Kennedy Murphy</p>  
-  <p>Addie McDaniel</p>  
-  <p>Maya Joska</p>  
-  <p>Hannah Ashley</p>  
+  <h2>12 Cyclones Full Roster:</h2>
+  <p>Rose Lauren</p>  
+  <p>Kathryn Riney</p>  
+  <p>Brena Acerman</p>  
+  <p>Aisha Merchant</p>  
+  <p>Kristen Harris</p>  
+  <p>Elizabeth Allen</p>  
+  <p>Reese Keller</p>  
+  <p>Alexis Ebelhaer</p>  
+  <p>Abie Bettenworth</p>  
+  <p>Makadin Daugherty</p>  
   
   
-  <p>Head Coach: Dale White</p>
-    <p>Assistant Coach: Ann White</p>
+  <p>Head Coach: Kylie Foster</p>
+  <p>Assistant Coach: Hannah Pierce</p>
   <a href="../pages/teams.html">TEAMS PAGE</a>
   </div>
 
