comlete roster and schedule update

--- a/Pages/teams.html
+++ b/Pages/teams.html
@@ -16,7 +16,7 @@
 
 <body>
   <nav class="navbar navbar-expand-xl navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Audubon Volleyball Club</a>
+    <a class="navbar-brand" href="#">Audubon Volleyball Association</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample06" aria-controls="navbarsExample06" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -34,7 +34,7 @@
             <a class="nav-link  " href="board.html">Board</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="sponsors.html">Links</a>
+            <a class="nav-link" href="sponsors.html">Events and Schedules</a>
           </li>
          </ul>
       </div>
@@ -45,24 +45,24 @@
   <h2>18 Blizzard</h2>
   <p>Head Coach: Delonda Hayes</p>
   <p>Assistant Coach: Jerry Forbes</p>
-  <a href="#">Full Roster</a>
+  <a href="../rosters/blizzard.html">Full Roster</a>
   </div>
 <div class="team">
 <h2>17 Heat</h2>
 <p>Head Coach: Steve Howard</p>
-<a href="#">Full Roster</a>
+<a href="../rosters/heat.html">Full Roster</a>
 </div>
 <div class="team">
   <h2>17 Typhoons</h2>
   <p>Head Coach: Dani Newsom</p>
   <p>Assistant Coach: Trey Newsom</p>
-  <a href="#">Full Roster</a>
+  <a href="../rosters/typhoons.html">Full Roster</a>
   </div>
   <div class="team">
     <h2>16 Hurricanes</h2>
     <p>Head Coach: Eric Hagan</p>
     <p>Assistant Coach: Cindy Marx</p>
-    <a href="#">Full Roster</a>
+    <a href="../rosters/hurricanes.html">Full Roster</a>
     </div>
 <div class="team">
    <h2>16 Storm</h2>
@@ -73,24 +73,24 @@
 <div class="team">
   <h2>15 Vortex</h2>
  <p>Head Coach: Kendra Bronsick</p>
- <a href="#">Full Roster</a>
+ <a href="../rosters/vortex.html">Full Roster</a>
 </div>
 <div class="team">
   <h2>15 Tornadoes</h2>
   <p>Head Coach: Kassidie Hayes</p>
   <p>Assistant Coach: Miranda Boaz </p>
-  <a href="#">Full Roster</a>
+  <a href="../rosters/tornadoes.html">Full Roster</a>
 </div>
 <div class="team">
   <h2>14 Thunder</h2>
   <p>Head Coach: Mackenzie Hayes</p>
   <p>Assistant Coach: Kristin Logsdon </p>
-  <a href="#">Full Roster</a>
+  <a href="../rosters/thunder.html">Full Roster</a>
 </div>
 <div class="team">
    <h2>14 Lightning</h2>
   <p>Head Coach: Steve Howard</p>
-  <a href="#">Full Roster</a>
+  <a href="../rosters/lightning.html">Full Roster</a>
 </div>
 <div class="team">
   <h2>13 Tsunami</h2>
