--- a/rosters/cyclones.html
+++ b/rosters/cyclones.html
@@ -4,7 +4,7 @@
 
 <head>
 
-    <title>AVC</title>
+    <title>AVA</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
@@ -43,21 +43,19 @@
 <div class="teampage">
 <div class="team">
   <h2>12 Cyclones Full Roster:</h2>
-  <p>Rose Lauren</p>  
+  <p>Rose Larsen</p>  
   <p>Kathryn Riney</p>  
-  <p>Brena Acerman</p>  
+  <p>Brena Ackerman</p>  
   <p>Aisha Merchant</p>  
   <p>Kristen Harris</p>  
   <p>Elizabeth Allen</p>  
   <p>Reese Keller</p>  
   <p>Alexis Ebelhaer</p>  
-  <p>Abie Bettenworth</p>  
+  <p>Abigail Butterworth</p>  
   <p>Makadin Daugherty</p>  
-  
-  
   <p>Head Coach: Kylie Foster</p>
   <p>Assistant Coach: Hannah Pierce</p>
-  <a href="../pages/teams.html">TEAMS PAGE</a>
+  
   </div>
 
 
