--- a/rosters/ice.html
+++ b/rosters/ice.html
@@ -4,7 +4,7 @@
 
 <head>
 
-    <title>AVC</title>
+    <title>AVA</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
@@ -48,16 +48,16 @@
   <p>Emma Goins</p>  
   <p>Sarah Brown</p>  
   <p>Ava Deters</p>  
-  <p>Ava Benson</p>  
+  <p>Ava Laine Benson</p>  
   <p>Ahalia Ramirez</p>  
-  <p>Kirsten Taylor</p>  
+  <p>Kiersten Taylor</p>  
   <p>Cameron Chandler</p>  
    
   
   
   <p>Head Coach: Gabe Weiss</p>
   <p>Assistant Coach: Tesha Weiss</p>
-  <a href="../pages/teams.html">TEAMS PAGE</a>
+  
   </div>
 
 
