--- a/rosters/storm.html
+++ b/rosters/storm.html
@@ -4,7 +4,7 @@
 
 <head>
 
-    <title>AVC</title>
+    <title>AVA</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
@@ -45,10 +45,10 @@
   <h2>16 Storm Full Roster:</h2>
   <p>Hadley Latham</p>  
   <p>Allie Hamilton</p>  
-  <p>Maddi Boswell</p>  
+  <p>Maddie Boswell</p>  
   <p>Brooklin Engler</p>  
   <p>Lexi Miles</p>  
-  <p>Chae Bowers</p>  
+  <p>Chea Bowers</p>  
   <p>Emma Gibson</p>  
   <p>Kenzie Skaggs</p>  
   <p>Camryn Kerwick</p>  
@@ -58,7 +58,7 @@
   
   <p>Head Coach: April Buckner</p>
   <p>Assistant Coach: Tonya Tivitt</p>
-  <a href="../pages/teams.html">TEAMS PAGE</a>
+  
   </div>
 
 
