--- a/rosters/tsunami.html
+++ b/rosters/tsunami.html
@@ -4,7 +4,7 @@
 
 <head>
 
-    <title>AVC</title>
+    <title>AVA</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
@@ -57,7 +57,7 @@
   
   <p>Head Coach: Dale White</p>
     <p>Assistant Coach: Ann White</p>
-  <a href="../pages/teams.html">TEAMS PAGE</a>
+ 
   </div>
 
 
