--- a/Pages/info.html
+++ b/Pages/info.html
@@ -16,7 +16,7 @@
 
 <body>
   <nav class="navbar navbar-expand-xl navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Audubon Volleyball Club</a>
+    <a class="navbar-brand" href="#">Audubon Volleyball Association</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample06" aria-controls="navbarsExample06" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -34,7 +34,7 @@
             <a class="nav-link " href="board.html">Board</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="sponsors.html">Links</a>
+            <a class="nav-link" href="sponsors.html">Events and Schedules</a>
           </li>
          </ul>
       </div>
