--- a/Pages/sponsors.html
+++ b/Pages/sponsors.html
@@ -16,7 +16,7 @@
 
 <body>
   <nav class="navbar navbar-expand-xl navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Audubon Volleyball Club</a>
+    <a class="navbar-brand" href="#">Audubon Volleyball Association</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample06" aria-controls="navbarsExample06" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -34,12 +34,40 @@
             <a class="nav-link " href="board.html">Board</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="sponsors.html">Links</a>
+            <a class="nav-link active" href="sponsors.html">Events and Schedules</a>
           </li>
          </ul>
       </div>
     </nav>
 
+    <div class="eventspage">
+      <div class="events">
+      <h3>AVA camp Nov 19th - Dec 16th</h3>
+      <h3>Cost per player is $75 for eight, one and a half hour sessions. </h3>
+      <h3>Head Coaches receive $50 a session and Assistants earn $25 a session. Each season is 1 1/2 hour </h3>
+      <h3>Starts the week of Nov 19th. No Practice on Nov 22. That practice will be added onto the end. </h3>
+      <h3></h3>
+      <div class="events">
+<h4>Hayden Center Practices</h4>
+<p>Mon @ 5:30 - 7:00 U12</p>
+<p>Mon @ 7:30 - 8:00 U15</p>
+<p>Tue @ 5:30 - 7:00 U13</p>
+<p>Tue @ 7:30 - 8:00 U16</p>
+<p>Wed @ 5:30 - 7:00 U14</p>
+<p>Wed @ 7:30 - 8:00 U17</p>
+<p>Thu @ 5:30 - 7:00 OPEN</p>
+<p>Thu @ 7:30 - 8:00 U18 and Boys</p>
+<p>Sunday @ 1:00 - 2:30 U12</p>
+<p>Sunday @ 2:30 - 4:00 U13</p>
+<p>Sunday @ 4:00 - 5:30 U15</p>
+<p>Sunday @ 5:30 - 7:00 U16</p>
+<p>Sunday @ 7:00 - 8:00 U18 and Boys</p>
+<h6>CVMS. Sunday</h6>
+<p>Sunday @ 3:30 - 5:00 U16</p>
+<p>Sunday @ 5:00 - 6:30 U16</p>
+</div>
+      </div>
+    </div>
 
   
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
