--- a/rosters/blizzard.html
+++ b/rosters/blizzard.html
@@ -4,7 +4,7 @@
 
 <head>
 
-    <title>AVC</title>
+    <title>AVA</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
@@ -27,14 +27,14 @@
             <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="teams.html">Teams</a>
+            <a class="nav-link active" href="../pages/teams.html">Teams</a>
           </li>
          
           <li class="nav-item">
-            <a class="nav-link  " href="board.html">Board</a>
+            <a class="nav-link  " href="../pages/board.html">Board</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="sponsors.html">Links</a>
+            <a class="nav-link" href="../pages/sponsors.html">Links</a>
           </li>
          </ul>
       </div>
@@ -43,9 +43,18 @@
 <div class="teampage">
 <div class="team">
   <h2>18 Blizzard</h2>
+  <p>Bre Adamson</p>
+  <p>Kammie-Jo Hayes</p>
+  <p>Joie Porter</p>
+  <p>Alix Stoermer</p>
+  <p>Maggie Vincent</p>
+  <p>Carlee Widmer</p>
+  <p>Breanna Metzger</p>
+  <p>Shealyn Riggs</p>
+  <p>Hannah Compton</p>
   <p>Head Coach: Delonda Hayes</p>
   <p>Assistant Coach: Jerry Forbes</p>
-  <a href="#">Full Roster</a>
+ 
   </div>
 
 
