--- a/Pages/blizzard.html
+++ b/Pages/blizzard.html
@@ -27,14 +27,14 @@
             <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="../pages/teams.html">Teams</a>
+            <a class="nav-link active" href="teams.html">Teams</a>
           </li>
          
           <li class="nav-item">
-            <a class="nav-link  " href="../pages/board.html">Board</a>
+            <a class="nav-link  " href="board.html">Board</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../pages/sponsors.html">Links</a>
+            <a class="nav-link" href="sponsors.html">Links</a>
           </li>
          </ul>
       </div>
@@ -42,23 +42,19 @@
 
 <div class="teampage">
 <div class="team">
-  <h2>16 Storm Full Roster:</h2>
-  <p>Hadley Latham</p>  
-  <p>Allie Hamilton</p>  
-  <p>Maddie Boswell</p>  
-  <p>Brooklin Engler</p>  
-  <p>Lexi Miles</p>  
-  <p>Chea Bowers</p>  
-  <p>Emma Gibson</p>  
-  <p>Kenzie Skaggs</p>  
-  <p>Camryn Kerwick</p>  
-  <p>Shelby Durham</p>
-  <p>Delaney Flaherty</p>
-  
-  
-  <p>Head Coach: April Buckner</p>
-  <p>Assistant Coach: Tonya Tivitt</p>
-  
+  <h2>18 Blizzard</h2>
+  <p>Bre Adamson</p>
+  <p>Kammie-Jo Hayes</p>
+  <p>Joie Porter</p>
+  <p>Alix Stoermer</p>
+  <p>Maggie Vincent</p>
+  <p>Carlee Widmer</p>
+  <p>Breanna Metzger</p>
+  <p>Shealyn Riggs</p>
+  <p>Hannah Compton</p>
+  <p>Head Coach: Delonda Hayes</p>
+  <p>Assistant Coach: Jerry Forbes</p>
+ 
   </div>
 
 
