--- a/Pages/cyclones.html
+++ b/Pages/cyclones.html
@@ -27,14 +27,14 @@
             <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="../pages/teams.html">Teams</a>
+            <a class="nav-link active" href="teams.html">Teams</a>
           </li>
          
           <li class="nav-item">
-            <a class="nav-link  " href="../pages/board.html">Board</a>
+            <a class="nav-link  " href="board.html">Board</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../pages/sponsors.html">Links</a>
+            <a class="nav-link" href="sponsors.html">Links</a>
           </li>
          </ul>
       </div>
@@ -42,22 +42,20 @@
 
 <div class="teampage">
 <div class="team">
-  <h2>13-1 Tsunami Full Roster:</h2>
-  <p>Conleigh Osborne</p>  
-  <p>Addison Travis</p>  
-  <p>Chase Mather</p>  
-  <p>Ella Decker</p>  
-  <p>Karsen Tipmore</p>  
-  <p>Julia Marshall</p>  
-  <p>Kennedy Murphy</p>  
-  <p>Addie McDaniel</p>  
-  <p>Maya Joska</p>  
-  <p>Hannah Ashley</p>  
+  <h2>12 Cyclones Full Roster:</h2>
+  <p>Rose Larsen</p>  
+  <p>Kathryn Riney</p>  
+  <p>Brena Ackerman</p>  
+  <p>Aisha Merchant</p>  
+  <p>Kristen Harris</p>  
+  <p>Elizabeth Allen</p>  
+  <p>Reese Keller</p>  
+  <p>Alexis Ebelhaer</p>  
+  <p>Abigail Butterworth</p>  
+  <p>Makadin Daugherty</p>  
+  <p>Head Coach: Kylie Foster</p>
+  <p>Assistant Coach: Hannah Pierce</p>
   
-  
-  <p>Head Coach: Dale White</p>
-    <p>Assistant Coach: Ann White</p>
- 
   </div>
 
 
