--- a/Pages/hurricanes.html
+++ b/Pages/hurricanes.html
@@ -27,14 +27,14 @@
             <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="../pages/teams.html">Teams</a>
+            <a class="nav-link active" href="teams.html">Teams</a>
           </li>
          
           <li class="nav-item">
-            <a class="nav-link  " href="../pages/board.html">Board</a>
+            <a class="nav-link  " href="board.html">Board</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../pages/sponsors.html">Links</a>
+            <a class="nav-link" href="sponsors.html">Links</a>
           </li>
          </ul>
       </div>
@@ -42,22 +42,20 @@
 
 <div class="teampage">
 <div class="team">
-  <h2>13 Ice Full Roster:</h2>
-  <p>Isabelle Reisz</p>  
-  <p>Molly Aud</p>  
-  <p>Emma Goins</p>  
-  <p>Sarah Brown</p>  
-  <p>Ava Deters</p>  
-  <p>Ava Laine Benson</p>  
-  <p>Ahalia Ramirez</p>  
-  <p>Kiersten Taylor</p>  
-  <p>Cameron Chandler</p>  
-   
-  
-  
-  <p>Head Coach: Gabe Weiss</p>
-  <p>Assistant Coach: Tesha Weiss</p>
-  
+  <h2>16 Hurricane Full Roster:</h2>
+  <p>Talasie Satterfield</p>  
+  <p>Madeline Castlen</p>  
+  <p>Kloee Phelps</p>  
+  <p>Kayla Clark</p>  
+  <p>Ryann Keller</p>  
+  <p>Elizabeth Moore</p>  
+  <p>Kendal Goetz</p>  
+  <p>Jasmine Beasley</p>  
+  <p>Chrissy  Marx</p>  
+  <p>Hallie Riordan</p>  
+  <p>Head Coach: Eric Hagan</p>
+  <p>Assistant Coach: Cindy Marx</p>
+ 
   </div>
 
 
