--- a/Pages/lightning.html
+++ b/Pages/lightning.html
@@ -27,14 +27,14 @@
             <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="../pages/teams.html">Teams</a>
+            <a class="nav-link active" href="teams.html">Teams</a>
           </li>
          
           <li class="nav-item">
-            <a class="nav-link  " href="../pages/board.html">Board</a>
+            <a class="nav-link  " href="board.html">Board</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../pages/sponsors.html">Links</a>
+            <a class="nav-link" href="sponsors.html">Links</a>
           </li>
          </ul>
       </div>
@@ -42,18 +42,18 @@
 
 <div class="teampage">
 <div class="team">
-  <h2>14 Thunder Full Roster:</h2>
-  <p>Lexi Owen</p>  
-  <p>Emma Rogers</p>  
-  <p>Abby Baughman</p>  
-  <p>Mia Covington</p>  
-  <p>Kenlee Ackerman</p>  
-  <p>Blair Riley</p>  
-  <p>Kenney Thompson</p>  
-  <p>Emily Christian</p>  
-  <p>Jesse Danials</p>  
-  
-  <p>Coach: McKenzie Hayes</p>
+  <h2>14 Lightning Full Roster:</h2>
+  <p>Lacey Pugh</p>  
+  <p>Ireland Boone</p>  
+  <p>Jayden Lawson</p>  
+  <p>Caraline Bates</p>  
+  <p>Linsey Warren</p>  
+  <p>Brooklyn Roberts</p>  
+  <p>Cassidy Polen</p>  
+  <p>Emmi Kirtley</p>  
+  <p>Anna Krampe</p>  
+  <p>Abbie Millay</p>  
+  <p>Coach: Steve Howard</p>
  
   
   </div>
