--- a/Pages/tsunami.html
+++ b/Pages/tsunami.html
@@ -27,14 +27,14 @@
             <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="../pages/teams.html">Teams</a>
+            <a class="nav-link active" href="teams.html">Teams</a>
           </li>
          
           <li class="nav-item">
-            <a class="nav-link  " href="../pages/board.html">Board</a>
+            <a class="nav-link  " href="board.html">Board</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../pages/sponsors.html">Links</a>
+            <a class="nav-link" href="sponsors.html">Links</a>
           </li>
          </ul>
       </div>
@@ -42,19 +42,22 @@
 
 <div class="teampage">
 <div class="team">
-  <h2>15 Tornadoes Full Roster:</h2>
-  <p>Paige Miles</p>  
-  <p>Haley Payne</p>  
-  <p>Courtney Hagan</p>  
-  <p>Aliyah Carwile</p>  
-  <p>Mackenzie Ayers</p>  
-  <p>Grace Moseley</p>  
-  <p>Kiley Lantrip</p>  
-  <p>Isabella Oakley</p>  
-  <p>Maggie Jones</p>  
-  <p>Josie Newcom</p>  
-  <p>Coach: Kassidy Hayes</p>
+  <h2>13-1 Tsunami Full Roster:</h2>
+  <p>Conleigh Osborne</p>  
+  <p>Addison Travis</p>  
+  <p>Chase Mather</p>  
+  <p>Ella Decker</p>  
+  <p>Karsen Tipmore</p>  
+  <p>Julia Marshall</p>  
+  <p>Kennedy Murphy</p>  
+  <p>Addie McDaniel</p>  
+  <p>Maya Joska</p>  
+  <p>Hannah Ashley</p>  
   
+  
+  <p>Head Coach: Dale White</p>
+    <p>Assistant Coach: Ann White</p>
+ 
   </div>
 
 
