--- a/Pages/heat.html
+++ b/Pages/heat.html
@@ -27,14 +27,14 @@
             <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="../pages/teams.html">Teams</a>
+            <a class="nav-link active" href="teams.html">Teams</a>
           </li>
          
           <li class="nav-item">
-            <a class="nav-link  " href="../pages/board.html">Board</a>
+            <a class="nav-link  " href="board.html">Board</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../pages/sponsors.html">Links</a>
+            <a class="nav-link" href="sponsors.html">Links</a>
           </li>
          </ul>
       </div>
@@ -42,19 +42,18 @@
 
 <div class="teampage">
 <div class="team">
-  <h2>12 Cyclones Full Roster:</h2>
-  <p>Rose Larsen</p>  
-  <p>Kathryn Riney</p>  
-  <p>Brena Ackerman</p>  
-  <p>Aisha Merchant</p>  
-  <p>Kristen Harris</p>  
-  <p>Elizabeth Allen</p>  
-  <p>Reese Keller</p>  
-  <p>Alexis Ebelhaer</p>  
-  <p>Abigail Butterworth</p>  
-  <p>Makadin Daugherty</p>  
-  <p>Head Coach: Kylie Foster</p>
-  <p>Assistant Coach: Hannah Pierce</p>
+  <h2>17 Heat Full Roster:</h2>
+  <p>Natalie Ewing</p>  
+  <p>Cassidy Towery</p>  
+  <p>Daisy Ritchie</p>  
+  <p>Kaylee Norman</p>  
+  <p>Anslee Hopewell</p>  
+  <p>Avery Marshall</p>  
+  <p>Lilly Farmer</p>  
+  <p>Ashton Johnson</p>  
+
+  <p>Coach: Steve Howard</p>
+  
   
   </div>
 
