--- a/Pages/ice.html
+++ b/Pages/ice.html
@@ -27,14 +27,14 @@
             <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="../pages/teams.html">Teams</a>
+            <a class="nav-link active" href="teams.html">Teams</a>
           </li>
          
           <li class="nav-item">
-            <a class="nav-link  " href="../pages/board.html">Board</a>
+            <a class="nav-link  " href="board.html">Board</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../pages/sponsors.html">Links</a>
+            <a class="nav-link" href="sponsors.html">Links</a>
           </li>
          </ul>
       </div>
@@ -42,19 +42,21 @@
 
 <div class="teampage">
 <div class="team">
-  <h2>15 Vortex Full Roster:</h2>
-  <p>Kendra Genehausen</p>  
-  <p>Jenna Arnold</p>  
-  <p>Maddy Cary</p>  
-  <p>Karlee Frobeter</p>  
-  <p>Allie Hargitt</p>  
-  <p>Camryn Kennedy</p>  
-  <p>Mollie Pride</p>  
-  <p>Cate Sights</p>  
-  <p>Abby Spong</p>  
-  <p>Rylee Thomas</p>  
-  <p>Coach: Kendra Bronsik</p>
+  <h2>13 Ice Full Roster:</h2>
+  <p>Isabelle Reisz</p>  
+  <p>Molly Aud</p>  
+  <p>Emma Goins</p>  
+  <p>Sarah Brown</p>  
+  <p>Ava Deters</p>  
+  <p>Ava Laine Benson</p>  
+  <p>Ahalia Ramirez</p>  
+  <p>Kiersten Taylor</p>  
+  <p>Cameron Chandler</p>  
+   
   
+  
+  <p>Head Coach: Gabe Weiss</p>
+  <p>Assistant Coach: Tesha Weiss</p>
   
   </div>
 
