--- a/Pages/storm.html
+++ b/Pages/storm.html
@@ -27,14 +27,14 @@
             <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="../pages/teams.html">Teams</a>
+            <a class="nav-link active" href="teams.html">Teams</a>
           </li>
          
           <li class="nav-item">
-            <a class="nav-link  " href="../pages/board.html">Board</a>
+            <a class="nav-link  " href="board.html">Board</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../pages/sponsors.html">Links</a>
+            <a class="nav-link" href="sponsors.html">Links</a>
           </li>
          </ul>
       </div>
@@ -42,19 +42,22 @@
 
 <div class="teampage">
 <div class="team">
-  <h2>17 Typhoons Full Roster:</h2>
-  <p>Delaney Evans</p>  
-  <p>Jenna Glenn</p>  
-  <p>Addison Fella</p>  
-  <p>Alyssa Butler</p>  
-  <p>Sara Merritt</p>  
-  <p>Terri Bishop</p>  
-  <p>Kinsley Phelps</p>  
-  <p>Zoie Larkins</p>  
-  <p>Hannah Axley</p>  
-
-  <p>Head Coach: Dani Newcom</p>
-  <p>Assistant Coach: Trey Newcom</p>
+  <h2>16 Storm Full Roster:</h2>
+  <p>Hadley Latham</p>  
+  <p>Allie Hamilton</p>  
+  <p>Maddie Boswell</p>  
+  <p>Brooklin Engler</p>  
+  <p>Lexi Miles</p>  
+  <p>Chea Bowers</p>  
+  <p>Emma Gibson</p>  
+  <p>Kenzie Skaggs</p>  
+  <p>Camryn Kerwick</p>  
+  <p>Shelby Durham</p>
+  <p>Delaney Flaherty</p>
+  
+  
+  <p>Head Coach: April Buckner</p>
+  <p>Assistant Coach: Tonya Tivitt</p>
   
   </div>
 
