--- a/Pages/thunder.html
+++ b/Pages/thunder.html
@@ -27,14 +27,14 @@
             <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="../pages/teams.html">Teams</a>
+            <a class="nav-link active" href="teams.html">Teams</a>
           </li>
          
           <li class="nav-item">
-            <a class="nav-link  " href="../pages/board.html">Board</a>
+            <a class="nav-link  " href="board.html">Board</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../pages/sponsors.html">Links</a>
+            <a class="nav-link" href="sponsors.html">Links</a>
           </li>
          </ul>
       </div>
@@ -42,18 +42,19 @@
 
 <div class="teampage">
 <div class="team">
-  <h2>17 Heat Full Roster:</h2>
-  <p>Natalie Ewing</p>  
-  <p>Cassidy Towery</p>  
-  <p>Daisy Ritchie</p>  
-  <p>Kaylee Norman</p>  
-  <p>Anslee Hopewell</p>  
-  <p>Avery Marshall</p>  
-  <p>Lilly Farmer</p>  
-  <p>Ashton Johnson</p>  
-
-  <p>Coach: Steve Howard</p>
+  <h2>14 Thunder Full Roster:</h2>
+  <p>Lexi Owen</p>  
+  <p>Emma Rogers</p>  
+  <p>Abby Baughman</p>  
+  <p>Mia Covington</p>  
+  <p>Kenlee Ackerman</p>  
+  <p>Blair Riley</p>  
+  <p>Kenney Thompson</p>  
+  <p>Emily Christian</p>  
+  <p>Jesse Danials</p>  
   
+  <p>Coach: McKenzie Hayes</p>
+ 
   
   </div>
 
