--- a/Pages/tornadoes.html
+++ b/Pages/tornadoes.html
@@ -27,14 +27,14 @@
             <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="../pages/teams.html">Teams</a>
+            <a class="nav-link active" href="teams.html">Teams</a>
           </li>
          
           <li class="nav-item">
-            <a class="nav-link  " href="../pages/board.html">Board</a>
+            <a class="nav-link  " href="board.html">Board</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../pages/sponsors.html">Links</a>
+            <a class="nav-link" href="sponsors.html">Links</a>
           </li>
          </ul>
       </div>
@@ -42,19 +42,19 @@
 
 <div class="teampage">
 <div class="team">
-  <h2>18 Blizzard</h2>
-  <p>Bre Adamson</p>
-  <p>Kammie-Jo Hayes</p>
-  <p>Joie Porter</p>
-  <p>Alix Stoermer</p>
-  <p>Maggie Vincent</p>
-  <p>Carlee Widmer</p>
-  <p>Breanna Metzger</p>
-  <p>Shealyn Riggs</p>
-  <p>Hannah Compton</p>
-  <p>Head Coach: Delonda Hayes</p>
-  <p>Assistant Coach: Jerry Forbes</p>
- 
+  <h2>15 Tornadoes Full Roster:</h2>
+  <p>Paige Miles</p>  
+  <p>Haley Payne</p>  
+  <p>Courtney Hagan</p>  
+  <p>Aliyah Carwile</p>  
+  <p>Mackenzie Ayers</p>  
+  <p>Grace Moseley</p>  
+  <p>Kiley Lantrip</p>  
+  <p>Isabella Oakley</p>  
+  <p>Maggie Jones</p>  
+  <p>Josie Newcom</p>  
+  <p>Coach: Kassidy Hayes</p>
+  
   </div>
 
 
