--- a/Pages/typhoons.html
+++ b/Pages/typhoons.html
@@ -27,14 +27,14 @@
             <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="../pages/teams.html">Teams</a>
+            <a class="nav-link active" href="teams.html">Teams</a>
           </li>
          
           <li class="nav-item">
-            <a class="nav-link  " href="../pages/board.html">Board</a>
+            <a class="nav-link  " href="board.html">Board</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../pages/sponsors.html">Links</a>
+            <a class="nav-link" href="sponsors.html">Links</a>
           </li>
          </ul>
       </div>
@@ -42,20 +42,20 @@
 
 <div class="teampage">
 <div class="team">
-  <h2>16 Hurricane Full Roster:</h2>
-  <p>Talasie Satterfield</p>  
-  <p>Madeline Castlen</p>  
-  <p>Kloee Phelps</p>  
-  <p>Kayla Clark</p>  
-  <p>Ryann Keller</p>  
-  <p>Elizabeth Moore</p>  
-  <p>Kendal Goetz</p>  
-  <p>Jasmine Beasley</p>  
-  <p>Chrissy  Marx</p>  
-  <p>Hallie Riordan</p>  
-  <p>Head Coach: Eric Hagan</p>
-  <p>Assistant Coach: Cindy Marx</p>
- 
+  <h2>17 Typhoons Full Roster:</h2>
+  <p>Delaney Evans</p>  
+  <p>Jenna Glenn</p>  
+  <p>Addison Fella</p>  
+  <p>Alyssa Butler</p>  
+  <p>Sara Merritt</p>  
+  <p>Terri Bishop</p>  
+  <p>Kinsley Phelps</p>  
+  <p>Zoie Larkins</p>  
+  <p>Hannah Axley</p>  
+
+  <p>Head Coach: Dani Newcom</p>
+  <p>Assistant Coach: Trey Newcom</p>
+  
   </div>
 
 
