--- a/Pages/vortex.html
+++ b/Pages/vortex.html
@@ -27,14 +27,14 @@
             <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="../pages/teams.html">Teams</a>
+            <a class="nav-link active" href="teams.html">Teams</a>
           </li>
          
           <li class="nav-item">
-            <a class="nav-link  " href="../pages/board.html">Board</a>
+            <a class="nav-link  " href="board.html">Board</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../pages/sponsors.html">Links</a>
+            <a class="nav-link" href="sponsors.html">Links</a>
           </li>
          </ul>
       </div>
@@ -42,19 +42,19 @@
 
 <div class="teampage">
 <div class="team">
-  <h2>14 Lightning Full Roster:</h2>
-  <p>Lacey Pugh</p>  
-  <p>Ireland Boone</p>  
-  <p>Jayden Lawson</p>  
-  <p>Caraline Bates</p>  
-  <p>Linsey Warren</p>  
-  <p>Brooklyn Roberts</p>  
-  <p>Cassidy Polen</p>  
-  <p>Emmi Kirtley</p>  
-  <p>Anna Krampe</p>  
-  <p>Abbie Millay</p>  
-  <p>Coach: Steve Howard</p>
- 
+  <h2>15 Vortex Full Roster:</h2>
+  <p>Kendra Genehausen</p>  
+  <p>Jenna Arnold</p>  
+  <p>Maddy Cary</p>  
+  <p>Karlee Frobeter</p>  
+  <p>Allie Hargitt</p>  
+  <p>Camryn Kennedy</p>  
+  <p>Mollie Pride</p>  
+  <p>Cate Sights</p>  
+  <p>Abby Spong</p>  
+  <p>Rylee Thomas</p>  
+  <p>Coach: Kendra Bronsik</p>
+  
   
   </div>
 
