--- a/Pages/board.html
+++ b/Pages/board.html
@@ -28,16 +28,16 @@
             <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="teams.html">Teams</a>
+            <a class="nav-link " href="../pages/teams.html">Teams</a>
           </li>
           <!-- <li class="nav-item">
             <a class="nav-link "  href="coaches.html">Coaches</a>
           </li> -->
           <li class="nav-item">
-            <a class="nav-link active " href="board.html">Board</a>
+            <a class="nav-link active " href="../pages/board.html">Board</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="sponsors.html">Events and Schedules</a>
+            <a class="nav-link" href="../pages/sponsors.html">Events and Schedules</a>
           </li>
          </ul>
       </div>
