--- a/Pages/coaches.html
+++ b/Pages/coaches.html
@@ -27,16 +27,16 @@
             <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="teams.html">Teams</a>
+            <a class="nav-link " href="../pages/teams.html">Teams</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active "  href="coaches.html">Coaches</a>
+            <a class="nav-link active "  href="../pages/coaches.html">Coaches</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="board.html">Board</a>
+            <a class="nav-link " href="../pages/board.html">Board</a>
           </li>
           <li class="nav-item">
-             <a class="nav-link" href="sponsors.html">Events and Schedules</a>
+             <a class="nav-link" href="../pages/sponsors.html">Events and Schedules</a>
           </li>
          </ul>
       </div>
