--- a/Pages/tornadoes.html
+++ b/Pages/tornadoes.html
@@ -27,14 +27,14 @@
             <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="teams.html">Teams</a>
+            <a class="nav-link active" href="../pages/teams.html">Teams</a>
           </li>
          
           <li class="nav-item">
-            <a class="nav-link  " href="board.html">Board</a>
+            <a class="nav-link  " href="../pages/board.html">Board</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="sponsors.html">Links</a>
+            <a class="nav-link" href="../pages/sponsors.html">Links</a>
           </li>
          </ul>
       </div>
