--- a/Pages/heat.html
+++ b/Pages/heat.html
@@ -52,7 +52,7 @@
   <p>Ashton Johnson</p>  
 
   <p>Coach: Steve Howard</p>
-  
+  <h6><a href="../pages/teams.html">FULL TEAM LIST</a></h6>
   
   </div>
 
