--- a/Pages/blizzard.html
+++ b/Pages/blizzard.html
@@ -54,7 +54,7 @@
   <p>Hannah Compton</p>
   <p>Head Coach: Delonda Hayes</p>
   <p>Assistant Coach: Jerry Forbes</p>
- 
+  <h6><a href="../pages/teams.html">FULL TEAM LIST</a></h6>
   </div>
 
 
