--- a/Pages/thunder.html
+++ b/Pages/thunder.html
@@ -54,7 +54,7 @@
   <p>Jesse Danials</p>  
   
   <p>Coach: McKenzie Hayes</p>
- 
+  <h6><a href="../pages/teams.html">FULL TEAM LIST</a></h6>
   
   </div>
 
