--- a/Pages/typhoons.html
+++ b/Pages/typhoons.html
@@ -55,7 +55,7 @@
 
   <p>Head Coach: Dani Newcom</p>
   <p>Assistant Coach: Trey Newcom</p>
-  
+  <h6><a href="../pages/teams.html">FULL TEAM LIST</a></h6>
   </div>
 
 
