--- a/Pages/heat.html
+++ b/Pages/heat.html
@@ -31,7 +31,7 @@
           </li>
          
           <li class="nav-item">
-            <a class="nav-link  " href="/board.html">Board</a>
+            <a class="nav-link  " href="board.html">Board</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="sponsors.html">Links</a>
@@ -39,6 +39,7 @@
          </ul>
       </div>
     </nav>
+
 <div class="teampage">
 <div class="team">
   <h2>17 Heat Full Roster:</h2>
