--- a/Pages/hurricanes.html
+++ b/Pages/hurricanes.html
@@ -55,7 +55,7 @@
   <p>Hallie Riordan</p>  
   <p>Head Coach: Eric Hagan</p>
   <p>Assistant Coach: Cindy Marx</p>
- 
+  <h6><a href="teams.html">ALL TEAMS</a></h6>
   </div>
 
 
