--- a/Pages/ice.html
+++ b/Pages/ice.html
@@ -57,7 +57,7 @@
   
   <p>Head Coach: Gabe Weiss</p>
   <p>Assistant Coach: Tesha Weiss</p>
-  
+  <h6><a href="teams.html">ALL TEAMS</a></h6>
   </div>
 
 
