--- a/Pages/lightning.html
+++ b/Pages/lightning.html
@@ -54,7 +54,7 @@
   <p>Anna Krampe</p>  
   <p>Abbie Millay</p>  
   <p>Coach: Steve Howard</p>
- 
+  <h6><a href="teams.html">ALL TEAMS</a></h6>
   
   </div>
 
