--- a/Pages/tornadoes.html
+++ b/Pages/tornadoes.html
@@ -54,7 +54,7 @@
   <p>Maggie Jones</p>  
   <p>Josie Newcom</p>  
   <p>Coach: Kassidy Hayes</p>
-  
+  <h6><a href="teams.html">ALL TEAMS</a></h6>
   </div>
 
 
