--- a/Pages/vortex.html
+++ b/Pages/vortex.html
@@ -54,7 +54,7 @@
   <p>Abby Spong</p>  
   <p>Rylee Thomas</p>  
   <p>Coach: Kendra Bronsik</p>
-  
+  <h6><a href="teams.html">ALL TEAMS</a></h6>
   
   </div>
 
