--- a/Pages/cyclones.html
+++ b/Pages/cyclones.html
@@ -55,7 +55,7 @@
   <p>Makadin Daugherty</p>  
   <p>Head Coach: Kylie Foster</p>
   <p>Assistant Coach: Hannah Pierce</p>
-  
+  <h6><a href="teams.html">ALL TEAMS</a></h6>
   </div>
 
 
