--- a/Pages/sponsors.html
+++ b/Pages/sponsors.html
@@ -44,7 +44,7 @@
       <div class="events">
       <h3>AVA camp Nov 19th - Dec 16th</h3>
       <h3>Cost per player is $75 for eight, one and a half hour sessions. </h3>
-      <h3>Head Coaches that run the camp receive $50 a session and Assistants make $25 a session. Each season is 1 1/2 hour </h3>
+      <h3>Head Coaches that run the camp receive $50 a session and Assistants make $25 a session. Each sesson is 1 1/2 hour </h3>
       <h3>Starts the week of Nov 19th. No Practice on Nov 22. That practice will be added onto the end. </h3>
       <h3>These practices are for teams, practice players and outside non club players that want to see what it's all about. We need coaches to run these large group practices. </h3>
       <div class="events">
