Clean JS Folder Add Button for Schedules

--- a/Pages/sponsors.html
+++ b/Pages/sponsors.html
@@ -48,7 +48,7 @@
       <h3>Starts the week of Nov 19th. No Practice on Nov 22. That practice will be added onto the end. </h3>
       <h3>These practices are for teams, practice players and outside non club players that want to see what it's all about. We need coaches to run these large group practices. </h3>
       <div class="events">
-<h4>Hayden Center Practices</h4>
+<!-- <h4>Hayden Center Practices</h4>
 <p>Mon @ 5:30 - 7:00 U12</p>
 <p>Mon @ 7:30 - 8:00 U15</p>
 <p>Tue @ 5:30 - 7:00 U13</p>
@@ -65,8 +65,14 @@
 <h6>CVMS. Sunday</h6>
 <p>Sunday @ 3:30 - 5:00 U14</p>
 <p>Sunday @ 5:00 - 6:30 U17</p>
-</div>
+</div> -->
       </div>
+    </div>
+    <br>
+    <hr class="featurette-divider">
+    <br>
+    <div class="quick">
+      <p><a class="btn btn-secondary" href="../data/AVCCondPrac.pdf" role="button">View Conditioning Practice Schedule </a></p>
     </div>
 
   
