--- a/Pages/sponsors.html
+++ b/Pages/sponsors.html
@@ -36,6 +36,9 @@
           <li class="nav-item">
             <a class="nav-link active" href="sponsors.html">Events and Schedules</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../data/calender.xlsx">AVA MASTER CALENDER</a>
+          </li>
          </ul>
       </div>
     </nav>
@@ -70,7 +73,9 @@
     <div class="quick">
       <p><a class="btn btn-secondary" href="../data/AVCCondPrac.pdf" role="button">View Conditioning Practice Schedule </a></p>
     </div>
-
+    <div class="quick">
+      <p><a class="btn btn-secondary" href="../data/calender.xlsx" role="button">AVA MASTER CALENDER </a></p>
+    </div>
   
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="../js/bootstrap.min.js"></script>
