--- a/Pages/board.html
+++ b/Pages/board.html
@@ -39,6 +39,9 @@
           <li class="nav-item">
             <a class="nav-link" href="sponsors.html">Events and Schedules</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../data/calender.xlsx">AVA MASTER CALENDER</a>
+          </li>
          </ul>
       </div>
     </nav>
