--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
             <li class="nav-item">
               <a class="nav-link" href="Pages/sponsors.html">Events and Schedules</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="data/calender.xlsx">AVA MASTER CALENDER</a>
+            </li>
            </ul>
         </div>
       </nav>
