registration and non travel flyer

--- a/Pages/sponsors.html
+++ b/Pages/sponsors.html
@@ -71,12 +71,23 @@
     <hr class="featurette-divider">
     <br>
     <div class="quick">
+      <p><a class="btn btn-secondary" href="../data/registrationForm.docx" role="button">Registration Form</a></p>
+    </div>
+    <br>
+    <hr class="featurette-divider">
+    <br>
+    <div class="quick">
       <p><a class="btn btn-secondary" href="../data/AVCCondPrac.pdf" role="button">View Conditioning Practice Schedule </a></p>
     </div>
+    <br>
+    <hr class="featurette-divider">
+    <br>
     <div class="quick">
       <p><a class="btn btn-secondary" href="../data/calender.xlsx" role="button">AVA MASTER CALENDER </a></p>
     </div>
-  
+    <br>
+    <hr class="featurette-divider">
+    <br>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="../js/bootstrap.min.js"></script>
     </body>
