--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
       <div class="jvalogo"><img src="images/JVALOGO.jpg" alt="JVA" style="width:205px;height:205px;"></div>
       
       <div class="whatsnew"><h1>News and Updates:</h1>  
-      <h3>From November 16th to Novemebter 30th</h3>  
-       <h3>AVA parents and players will be 
-      able to order gear and apparel @</h3>
-      <h3><a href="https://owensboro-spirit-wear.myshopify.com/">Owensboro Spirit Wear</a></h3> 
+        <div class="quick">
+          <p><a class="btn btn-secondary" href="data/nonTravelFlyer.docx" role="button">Non Travel Flyer </a></p>
+        </div>
+      <h3>Registration Form on events and schedules page</h3> 
       </div>  
       
       <div class="usav"><img src="images/USAV.png" alt="USAV" style="width:250px;height:200px;"></div>
