--- a/index.html
+++ b/index.html
@@ -67,7 +67,13 @@
         <div class="quick">
           <p><a class="btn btn-secondary" href="data/nonTravelFlyer.docx" role="button">Non Travel Flyer </a></p>
         </div>
-      <h3>Registration Form on events and schedules page</h3> 
+      <h3>Registration form can be found on the events and schedules page</h3>
+        <p></p>
+      <h3>Please mail registration form to:
+        
+        P.O. Box 481
+        Owensboro, KY 42302
+        </h3> 
       </div>  
       
       <div class="usav"><img src="images/USAV.png" alt="USAV" style="width:250px;height:200px;"></div>
